upload delete, display size, styling

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,8 +1,12 @@
 $color-grey-text: #ddd;
 $color-grey-background: #333333;
+
 $color-teal-text: #9cc5c7;
 $color-teal-primary: #1f9398;
-$color-teal-accent: #008088;
+$color-teal-accent: #026168;
+
 $color-violet-text: #b6aaca;
-$color-violet-primary: #9972C6;
-$color-violet-accent: #7851A8;
+$color-violet-primary: #7533c0;
+$color-violet-accent: #411479;
+
+$color-alert: #6b0b0b;
