--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,6 +1,34 @@
 @import 'variables';
 
 body {
-  background-color: $color-grey-background;
+  background-color: #000;
   color: $color-grey-text;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(/assets/background-tile.jpg);
+  z-index: -1;
+  opacity: .3;
+}
+
+.button-delete {
+  border: 1px solid $color-alert;
+  border-radius: 12px;
+  padding: 8px 2px;
+  background-color: scale-color($color-alert, $alpha: -50%);
+  line-height: 1em;
+  transition: all .1s;
+  text-shadow: 0px 0px 0px #000;
+  color: $color-violet-text;
+
+  &:hover {
+    cursor: pointer;
+    background-color: $color-alert;
+    color: $color-grey-text;
+  }
 }
