--- a/app/assets/stylesheets/uploads.scss
+++ b/app/assets/stylesheets/uploads.scss
@@ -13,3 +13,55 @@
     width: 100%;
   }
 }
+
+.uploads-entry {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 750px;
+  text-align: center;
+  margin: 20px auto 0 auto;
+  padding: 15px 25px;
+  text-decoration: none;
+  color: inherit;
+  border-radius: 10px;
+  box-shadow: rgba(0,0,0, 0.48) 3px 3px 6px 2px, rgba(0,0,0,0) 0px 0px 0px 0px inset;
+  background-image: linear-gradient(165deg, rgba(65,20,121, 0) 0%, rgba(65,20,121, .05) 14%, rgba(2,97,104, .1)  24%, rgba(2,97,104, .05)  34%, rgba(236, 233, 230, 0)  100%);
+  background-size: 150% 100%;
+  background-position: 0% 100%;
+  transition: all .4s;
+  text-shadow: 2px 4px 1px #000;
+  overflow: hidden;
+  
+  &:hover {
+    box-shadow: rgba(0,0,0, 0) 0px 0px 0px 0px, rgba(0,0,0,1) 3px 3px 6px 0px inset;
+    background-position: -75% 100%;
+    text-shadow: 8px 16px 3px #000;
+
+    .button-delete {
+      box-shadow: rgba(0,0,0, 0.48) 8px 14px 4px 2px;
+    }
+  }
+
+  > * {
+    width: 100%;
+  }
+  
+  &-index {
+    max-width: 10%;
+  }
+  
+  &-delete {
+    max-width: 10%;
+  }
+  
+  &-size {
+    max-width: 10%;
+  }
+
+  .button-delete {
+    box-shadow: rgba(0,0,0, .5) 2px 2px 1px 1px;
+    transition: all .4s;
+  }
+}
