--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -11,7 +11,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(/assets/background-tile.jpg);
+  background-image: asset_url('background-tile.jpg');
   z-index: -1;
   opacity: .3;
 }
